--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,6 +13,15 @@
     = yield(:head)
   %body
     = render 'layouts/header'
+    .container
+      .row
+        #sidebar.col-md-2
+          = render 'layouts/menu'
+        #content.col-md-10
+          = render 'layouts/path'
+          = render 'layouts/messages'
+          = yield
+    = render 'layouts/footer'
     -#   .container
     -#     .row
     -#       #sidebar.span2
