--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -1,13 +1,13 @@
 %ul.nav.nav-tabs.nav-stacked
   %li.nav-header.alert-info
-    %i.icon-tasks
+    %span.glyphicon.glyphicon-th-list
     我的工作台
   %li 年度培训记录
   %li 历史学分查询
   %li 修改密码
 %ul.nav.nav-tabs.nav-stacked
   %li.nav-header.alert-info
-    %i.icon-tasks
+    %span.glyphicon.glyphicon-inbox
     我的工作台
   %li 年度培训记录
   %li 历史学分查询
