--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -5,20 +5,10 @@ $navbar-default-color: $light-orange;
 @import 'bootstrap';
 
 header {
-    background-color: rgb(199,222,231);
-    color: rgb(80,0,255);
+    /* background-color: rgb(199,222,231); */
+    /* color: rgb(80,0,255); */
     /* height: 40px; */
     /* overflow: hidden; */
-    margin-bottom: 20px;
-    padding: 5px 5px;
-
-    @extend .navbar;
-    /* @extend .navbar-fixed-top; */
-
-    nav#utility {
-      float: right
-    }
-    h3 { margin: 0;}
 }
 
 
