--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,12 +1,8 @@
-%footer#page_footer
-  .row
-    .col-md-4
-      %p 建议使用Chrome、Firefox等浏览器，或IE9.0以上版本
-    .col-md-4
-      %p &copy; 2013 湖北银监局版权所有
-    .col-md-4
-      %ul
-        %li 业务主管部门：人事处 | 联系电话: 85565053      
-        %a{href: "mailto:luowenbo@cbrc.gov.cn", class: "label"} 
-          %i.icon-envelope.icon-white
-          联系管理员
+%nav.navbar.nav-default.navbar-fixed-bottom.navbar-inverse
+  .container
+    .collapse.navbar-collapse
+      %ul.nav.navbar-nav
+        %li.navbar-text 建议使用Chrome、Firefox等浏览器，或IE9.0以上版本
+        %li.navbar-text 版权所有&copy; 2013 湖北银监局
+        %li.navbar-text 业务主管部门：人事处 | 联系电话: 85565053      
+        %li= link_to '联系管理员', "mailto:luowenbo@cbrc.gov.cn" 
