--- a/app/views/train_courses/show.html.haml
+++ b/app/views/train_courses/show.html.haml
@@ -1,29 +1,6 @@
 %p#notice= notice
 
-%p
-  %b 培训名称:
-  = @train_course.name
-%p
-  %b 培训时间:
-  = @train_course.start_date
-%p
-  %b 学分:
-  = @train_course.points
-%p
-  %b 课时:
-  = @train_course.hours
-%p
-  %b 备注:
-  = @train_course.description
-%p
-  %b 组织单位:
-  = @train_course.organizer
-%p
-  %b 状态:
-  = @train_course.status
-%p
-  %b 提交人:
-  = @train_course.register.email
+= render :partial => "train_course" 
 
 .btn-group
   = link_to '编辑', edit_train_course_path(@train_course), class: 'btn btn-default'
